--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
     compile "org.apache.pdfbox:pdfbox:2.0.4"
     compile "org.bytedeco.javacpp-presets:tesseract-platform:3.04.01-1.3"
     compile group: 'args4j', name: 'args4j', version: '2.33'
-
+    compile 'info.debatty:java-string-similarity:1.0.0'
+    compile "com.esotericsoftware:kryo:4.0.1"
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
