--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile group: 'args4j', name: 'args4j', version: '2.33'
     compile 'info.debatty:java-string-similarity:1.0.0'
     compile "com.esotericsoftware:kryo:4.0.1"
+    compile 'nu.pattern:opencv:2.4.9-4'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
