--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,3 +3,6 @@ log4j.logger.deng=DEBUG
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+
+
+log4j.logger.org.apache.pdfbox=info
