--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'info.debatty:java-string-similarity:1.0.0'
     compile "com.esotericsoftware:kryo:4.0.1"
     compile 'nu.pattern:opencv:2.4.9-4'
+    compile 'org.languagetool:language-en:3.9'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
