Updated to log to logentries, fixed save file, fixed dir reading mode

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,15 @@
-log4j.rootLogger=DEBUG, Console
+log4j.rootLogger=DEBUG, Console, LE
 log4j.logger.deng=DEBUG
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
+log4j.appender.LE=com.logentries.log4j.LogentriesAppender
+log4j.appender.LE.Threshold=INFO
+#Note without this param no data will be posted to log entries
+#log4j.appender.LE.token=LOGENTRIES_TOKEN
+log4j.appender.LE.ssl=false
+log4j.appender.LE.layout=org.apache.log4j.PatternLayout
+log4j.appender.LE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss ZZZ} %F.%L level:%-5p%m
 
-log4j.logger.org.apache.pdfbox=info
+log4j.logger.org.apache.pdfbox=ERROR
