--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile "com.esotericsoftware:kryo:4.0.1"
     compile 'nu.pattern:opencv:2.4.9-4'
     compile 'org.languagetool:language-en:3.9'
+    compile group: 'com.logentries', name: 'logentries-appender', version: '1.1.12'
+
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
