Updated for better memory consumption

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,3 +13,4 @@ log4j.appender.LE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss ZZZ} %F.%L level:%-5p%m
 
 log4j.logger.org.apache.pdfbox=ERROR
+log4j.logger.org.apache.fontbox.util.autodetect.FontFileFinder=ERROR
